apps/hivemq/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hivemq
  namespace: hivemq
spec:
  selector:
    app.kubernetes.io/name: hivemq
    app.kubernetes.io/instance: hivemq
  ports:
    - name: mqtt
      port: 1883
      targetPort: mqtt
      protocol: TCP
    - name: websocket
      port: 8000
      targetPort: websocket
      protocol: TCP
