apps/hivemq/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hivemq
  namespace: hivemq
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: default
  hostnames:
    - hivemq.x.pmcd.io
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: hivemq
          port: 8080
